--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Chess Game APP </title>
-    <link rel = "stylesheet" href = "style.css">
+    <title>Chess Game APP</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
-    <div id = "gameboard"></div>
-    <p> It is <span id = "player"></span> go.</p>
-    <p id = "info-display"></p>
-    <script src = "pieces.js"></script>
-    <script src = "main.js"></script>
+    <header>
+        <h1>Chess Game By Hasan</h1>
+    </header>
+    <div id="gameboard"></div>
+    <p>It is <span id="player"></span>’s turn.</p>
+    <p id="info-display"></p>
+    <script src="pieces.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
